force-app/main/default/objects/Trip__c/Trip__c.object-meta.xml
<CustomObject>
    <description>Updated for demo purposes - 2023-10-03</description>
    <label>Trip</label>
    <nameField>
        <displayFormat>TRP-{00000}</displayFormat>
        <label>Trip ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Trips</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>