force-app/main/default/objects/Trip__c/fields/Approved__c.field-meta.xml
<CustomField>
    <fullName>Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Updated for demo purposes - 2023-10-03</description>
    <label>Approved?</label>
    <type>Checkbox</type>
</CustomField>