force-app/main/default/objects/Trip__c/fields/Approved_By__c.field-meta.xml
<CustomField>
    <fullName>Approved_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Updated for demo purposes - 2023-09-14</description>
    <label>Approved By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Trips</relationshipName>
    <type>Lookup</type>
</CustomField>