force-app/main/default/objects/Trip__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <description>Updated for demo purposes - 2023-01-09</description>
    <label>Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>