force-app/main/default/objects/Trip__c/fields/From__c.field-meta.xml
<CustomField>
    <fullName>From__c</fullName>
    <description>Updated for demo purposes - 2023-10-03</description>
    <label>From</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>