force-app/main/default/objects/Trip__c/fields/To__c.field-meta.xml
<CustomField>
    <fullName>To__c</fullName>
    <description>Updated for demo purposes - 2023-09-14</description>
    <label>To</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>